    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin" >

        <ImageView
            android:contentDescription="@string/descripcion_image_view"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ic_mppe_logo"
            android:id="@+id/imageView"
            tools:ignore="RtlHardcoded"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            />

        <TextView
            android:id="@+id/title_text_view"
            android:layout_toRightOf="@+id/imageView"
            android:layout_toEndOf="@+id/imageView"
            android:text="@string/news_example_title"
            style="@style/Curso.Text.Title"
            android:layout_width="200dp"
            android:layout_height="120dp"/>

        <TextView
            android:id="@+id/subtitle_text_view"
            android:layout_below="@+id/imageView"
            android:layout_alignLeft="@+id/content_text_view"
            android:text="@string/news_example_subtitle"
            style="@style/Curso.Text.Subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
