<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="ve.com.fdefreitas.curso.app.activities.SearchActivity">

    <TextView
        android:id="@+id/search_label"
        android:text="@string/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/state_label"
        android:text="@string/state"
        android:layout_below="@+id/search_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/state_label"
        android:id="@+id/state_spinner"/>

    <TextView
        android:id="@+id/municipality_label"
        android:text="@string/minicipality"
        android:layout_below="@id/state_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Spinner
        android:id="@+id/municipality_spinner"
        android:layout_below="@id/municipality_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>
