<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/scrollView"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        >


        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:progress="20"
            android:max="100"
            android:id="@+id/progressBar"/>

        <ImageView
                android:contentDescription="@string/descripcion_image_view"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/ic_mppe_logo"
                android:id="@+id/imageView"
                tools:ignore="RtlHardcoded"
                android:layout_below="@id/progressBar"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                />

        <TextView
            android:id="@+id/title_text_view"
            android:layout_alignTop="@+id/imageView"
            android:layout_toRightOf="@+id/imageView"
            android:layout_toEndOf="@+id/imageView"
            android:text="@string/news_example_title"
            style="@style/Redba.Text.Title"
            android:layout_width="200dp"
            android:layout_height="120dp"/>

        <TextView
            android:id="@+id/subtitle_text_view"
            android:layout_below="@+id/imageView"
            android:layout_alignLeft="@+id/content_text_view"
            android:text="@string/news_example_subtitle"
            style="@style/Redba.Text.Subtitle"
            android:background="@drawable/card_shadow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="RtlHardcoded"/>

        <TextView
            android:id="@+id/author_text_view"
            android:layout_below="@+id/subtitle_text_view"
            android:layout_alignLeft="@+id/content_text_view"
            android:text="Fernando De Freitas"
            style="@style/Redba.Text.Content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="RtlHardcoded"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_below="@+id/author_text_view"
            android:text="@string/show_toast"
            android:id="@+id/button"/>

        <TextView
            android:id="@+id/selected_date_text_view"
            android:textSize="16sp"
            android:text="DD/MM/YYYY"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_toRightOf="@id/button"
            android:layout_alignBaseline="@+id/button"
            android:padding="8dp"
            tools:ignore="RtlHardcoded"/>

        <TextView
            android:id="@+id/content_text_view"
            android:layout_below="@+id/button"
            android:text="@string/news_example_content"
            style="@style/Redba.Text.Content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
</ScrollView>
